--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mytests.spring</groupId>
-    <artifactId>inner-config-beans</artifactId>
+    <artifactId>spring-inner-config-beans</artifactId>
     <version>1.0.0</version>
     <build>
         <plugins>
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.1.8.RELEASE</version>
+            <version>5.1.10.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
